--- a/VM/provisioning/templates/hosts.j2
+++ b/VM/provisioning/templates/hosts.j2
@@ -1,4 +1,4 @@
-192.168.56.100 ctrl
+192.168.56.100 ctrl team18.local
 {% for i in range(1, num_workers + 1) %}
     192.168.56.10{{ i }} node-{{ i }}
 {% endfor %}
